Minor bug fix
Fixed background image not showing
(bug found by Skunk, Mantas owner)

--- a/styles/charadex.css
+++ b/styles/charadex.css
@@ -210,7 +210,7 @@ body {
 
   /* Global Background */
   background-color: var(--cd-body-background-color);
-  background-image: var(--cd-background-body-image);
+  background-image: var(--cd-body-background-image);
   background-position: center;
   background-size: cover;
 
